Z3/Z2/.gcc.out
/rhome/l/lbuturovic1/workspace/OR/Z3/Z2/main.c: In function ‘parallel_max’:
/rhome/l/lbuturovic1/workspace/OR/Z3/Z2/main.c:7:35: error: expected ‘;’ before ‘else’
  return parallel_max(p,p+(g-p)/2) else return parllel_max(p+(g-p)/2,g);
                                   ^~~~
/rhome/l/lbuturovic1/workspace/OR/Z3/Z2/main.c:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
